c socket 存放位置迁移