@@ -1,20 +1,25 @@
 plugins {
     id("com.android.library")
     id("org.jetbrains.kotlin.android")
-    //子模块好像不能直接使用下面的方式依赖
 //    alias(libs.plugins.android.gradle.library)
-//    alias(libs.plugins.kotlin.android)
 }
 
 android {
     namespace = "com.example.datalib"
-    compileSdk = 33
+    compileSdk = 34
 
     defaultConfig {
         minSdk = 24
 
         testInstrumentationRunner = "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles("consumer-rules.pro")
+        externalNativeBuild {
+            cmake {
+                cppFlags("")
+                //只编译 arm64-v8架构的 abi
+                abiFilters("arm64-v8a")
+            }
+        }
     }
 
     buildTypes {
@@ -26,6 +31,12 @@ android {
             )
         }
     }
+    externalNativeBuild {
+        cmake {
+            path("src/main/cpp/CMakeLists.txt")
+            version = "3.22.1"
+        }
+    }
     compileOptions {
         sourceCompatibility = JavaVersion.VERSION_1_8
         targetCompatibility = JavaVersion.VERSION_1_8
@@ -33,16 +44,28 @@ android {
     kotlinOptions {
         jvmTarget = "1.8"
     }
-}
 
+}
+//tasks.withType<JavaCompile> {
+//    options.compilerArgs.addAll(listOf(
+//        "--enable-preview",
+//        "--add-modules=jdk.incubator.vector"
+//    ))
+//}
+
+//tasks.withType<JavaExec>() {
+//    jvmArgs("--enable-preview", "-Djava.library.path=./lib", "--add-modules=jdk.incubator.vector")
+//}
 dependencies {
     implementation(project(":domain"))
     implementation(libs.androidx.core)
-    implementation(libs.androidx.appcompat)
-    implementation(libs.material)
     implementation(libs.datastore.preferences)// 使用类似 SharedPreferences APi
     implementation(libs.retrofit2.retrofit)
     implementation(libs.retrofit2.converter.gson)
+    testImplementation(libs.junit)
+    androidTestImplementation(libs.junit.androidx)
+    androidTestImplementation(libs.espresso.core)
+    implementation(libs.material)
     testImplementation(libs.junit)
     androidTestImplementation(libs.junit.androidx)
     androidTestImplementation(libs.espresso.core)
